--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,6 +4,6 @@
   background-color: #2A2C2F;
   display: flex;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: center;
   outline: 1px solid white;
 }
