--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,7 +1,9 @@
 .page {
-  min-width: 320px;
-  max-width: 1280px;
   font-family: 'Inter', 'Arial', sans-serif;
-  margin: 0 auto;
   background-color: #2A2C2F;
+  outline: 1px solid red;
+
+  margin: 0 auto;
+  /*убрать из блока*/
 }
+
