--- a/pages/index.css
+++ b/pages/index.css
@@ -3,12 +3,16 @@
 /*Blocks*/
 @import url(../blocks/page/page.css);
 @import url(../blocks/header/header.css);
-
+@import url(../blocks/main/main.css);
+@import url(../blocks/lead/lead.css);
 /*Elements*/
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/header/__lang-links/header__lang-links.css);
 @import url(../blocks/header/__lang-link/header__lang-link.css);
-
+@import url(../blocks/lead/__title/lead__title.css);
+@import url(../blocks/lead/__subtitle/lead__subtitle.css);
+@import url(../blocks/lead/__image/lead__image.css);
+@import url(../blocks/lead/__image-caption/lead__image-caption.css);
 /*Modifiers*/
 @import url(../blocks/header/__lang-link/header__lang-link_en.css);
 @import url(../blocks/header/__lang-link/header__lang-link_ru.css);
