--- a/blocks/lead/__image-caption/lead__image-caption.css
+++ b/blocks/lead/__image-caption/lead__image-caption.css
@@ -8,3 +8,17 @@
   padding-top: 8px;
   justify-self: start;
 }
+
+@media  screen and (max-width: 768px) {
+  .lead__image-caption {
+    padding-left: 24px;
+  }
+
+}
+
+@media  screen and (max-width: 320px) {
+  .lead__image-caption {
+    padding-left: 16px;
+  }
+
+}
