--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -13,6 +13,7 @@
 
 @media screen and (max-width: 768px) {
   .lead__title {
+    max-width: 100%;
     font-size: 96px;
     line-height: 1.2;
   }
