--- a/pages/index.css
+++ b/pages/index.css
@@ -5,6 +5,7 @@
 @import url(../blocks/header/header.css);
 @import url(../blocks/main/main.css);
 @import url(../blocks/lead/lead.css);
+@import url(../blocks/intro/intro.css);
 /*Elements*/
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/header/__lang-links/header__lang-links.css);
@@ -13,6 +14,11 @@
 @import url(../blocks/lead/__subtitle/lead__subtitle.css);
 @import url(../blocks/lead/__image/lead__image.css);
 @import url(../blocks/lead/__image-caption/lead__image-caption.css);
+@import url(../blocks/intro/__title/intro__title.css);
+@import url(../blocks/intro/__paragraph/intro__paragraph.css);
+@import url(../blocks/intro/__facts/intro__facts.css);
+@import url(../blocks/intro/__fact/intro__fact.css);
 /*Modifiers*/
 @import url(../blocks/header/__lang-link/header__lang-link_en.css);
 @import url(../blocks/header/__lang-link/header__lang-link_ru.css);
+@import url(../blocks/intro/__fact/intro__fact_weight-normal.css);
