--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -3,7 +3,24 @@
   background-color: #2A2C2F;
   outline: 1px solid red;
   margin: 0 auto;
-
+  /*max-width: 1184px;*/
   /*убрать из блока*/
 }
+/*
+@media  screen and (max-width: 1024px) {
+  .page {
+    max-width: 928px;
+  }
+}
 
+@media  screen and (max-width: 768px) {
+  .page {
+    max-width: 768px;
+  }
+}
+
+@media  screen and (max-width: 320px) {
+  .page {
+    max-width: 320px;
+  }
+}
