--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -2,6 +2,7 @@
   background-color: #2A2C2F;
   max-width: 984px;
   margin: 0 auto;
+
   display: grid;
   grid-template-columns: fit-content(690px);
 }
@@ -15,7 +16,7 @@
 
 @media screen and (max-width: 768px) {
   .intro {
-    max-width: 720px;
+    width: 720px;
     padding-left: 24px;
   }
 }
