--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,7 +1,7 @@
 .lead {
   max-width: 984px;
   margin: 0 auto;
-  outline: 3px solid white;
+  outline: 3px solid blue;
   background-color: #2A2C2F;
   display: grid;
   justify-items: center;
