доделала адаптивность и заменила картинки

--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,12 +1,24 @@
 .lead__title {
+  max-width: 720px;
+  color: white;
   font-size: 96px;
   font-weight: 900;
   line-height: 1;
-  color: white;
   text-align: center;
-  max-width: 720px;
   margin: 0;
   padding-bottom: 32px;
+}
+
+@media screen and (max-width: 675px) {
+  .lead__title {
+    font-size: 70px;
+  }
+}
+
+@media screen and (max-width: 495px) {
+  .lead__title {
+    font-size: 45px;
+  }
 }
 
 @media screen and (max-width: 320px) {
