--- a/blocks/photo-grid/__list/photo-grid__list.css
+++ b/blocks/photo-grid/__list/photo-grid__list.css
@@ -6,8 +6,7 @@
   align-items: center;
   justify-items: space-around;
   outline: 1px solid white;
-  max-width: 1184px;
-  margin: 0 auto;
+  /*max-width: 1184px;*/
   padding: 0;
 }
 /*
