--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,30 +1,22 @@
 .intro {
   background-color: #2A2C2F;
-  max-width: 984px;
+  max-width: 1024px;
   margin: 0 auto;
-
   display: grid;
   grid-template-columns: fit-content(690px);
-}
-
-
-@media screen and (max-width: 1024px) {
-  .intro {
-    max-width: 928px;
-  }
+  padding-left: 48px;
 }
 
 @media screen and (max-width: 768px) {
   .intro {
-    width: 720px;
     padding-left: 24px;
   }
 }
 
 @media screen and (max-width: 320px) {
   .intro {
-    max-width: 288px;
     padding-left: 16px;
+    padding-right: 16px;
   }
 }
 
