--- a/pages/index.css
+++ b/pages/index.css
@@ -9,7 +9,9 @@
 @import url(../blocks/photo-grid/photo-grid.css);
 @import url(../blocks/places/places.css);
 @import url(../blocks/place/place.css);
+@import url(../blocks/place-baikal/place-baikal.css);
 /*Elements*/
+@import url(../blocks/page/__section/page__section.css);
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/header/__lang-links/header__lang-links.css);
 @import url(../blocks/header/__lang-link/header__lang-link.css);
@@ -30,5 +32,9 @@
 @import url(../blocks/place/__link/place__link.css);
 @import url(../blocks/place/__text/place__text.css);
 @import url(../blocks/place/__paragraph/place__paragraph.css);
+@import url(../blocks/place-baikal/__link/place-baikal__link.css);
+@import url(../blocks/place-baikal/__cover/place-baikal__cover.css);
+@import url(../blocks/place-baikal/__title/place-baikal__title.css);
+@import url(../blocks/place-baikal/__subtitle/place-baikal__subtitle.css);
 /*Modifiers*/
 @import url(../blocks/intro/__fact/intro__fact_weight-normal.css);
