--- a/pages/index.css
+++ b/pages/index.css
@@ -10,8 +10,15 @@
 @import url(../blocks/places/places.css);
 @import url(../blocks/place/place.css);
 @import url(../blocks/place-baikal/place-baikal.css);
+@import url(../blocks/footer/footer.css);
 /*Elements*/
-@import url(../blocks/page/__section/page__section.css);
+@import url(../blocks/page/__font-smoothed/page__font-smoothed.css);
+@import url(../blocks/page/__header/page__header.css);
+@import url(../blocks/page/__lead/page__lead.css);
+@import url(../blocks/page/__intro/page__intro.css);
+@import url(../blocks/page/__photo-grid/page__photo-grid.css);
+@import url(../blocks/page/__place/page__place.css);
+@import url(../blocks/page/__footer/page__footer.css);
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/header/__lang-links/header__lang-links.css);
 @import url(../blocks/header/__lang-link/header__lang-link.css);
@@ -36,5 +43,9 @@
 @import url(../blocks/place-baikal/__cover/place-baikal__cover.css);
 @import url(../blocks/place-baikal/__title/place-baikal__title.css);
 @import url(../blocks/place-baikal/__subtitle/place-baikal__subtitle.css);
+@import url(../blocks/footer/__menu/footer__menu.css);
+@import url(../blocks/footer/__links/footer__links.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
+@import url(../blocks/footer/__link/footer__link.css);
 /*Modifiers*/
 @import url(../blocks/intro/__fact/intro__fact_weight-normal.css);
