--- a/blocks/place-baikal/__cover/place-baikal__cover.css
+++ b/blocks/place-baikal/__cover/place-baikal__cover.css
@@ -1,14 +1,8 @@
 .place-baikal__cover {
-  background-color: rgba(42, 44, 47, 0.3);
-  position: absolute;
-  top: 0; bottom: 0;
-  left: 0; right: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  position: relative;
 }
 
-.place-baikal__cover:hover {
-  background-color: rgba(42, 44, 47, 0.8);
-}
+
