--- a/blocks/place-baikal/__link/place-baikal__link.css
+++ b/blocks/place-baikal/__link/place-baikal__link.css
@@ -3,7 +3,11 @@
   margin: 0 auto;
   max-width: 1118px;
   min-height: 100vh;
-  display: block;
+  display: flex;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   background-image: url(/images/footer-photo-trains.jpg);
   background-repeat: no-repeat;
   background-size: cover;
