--- a/blocks/lead/__image-caption/lead__image-caption.css
+++ b/blocks/lead/__image-caption/lead__image-caption.css
@@ -2,6 +2,7 @@
   font-size: 10px;
   font-weight: normal;
   line-height: 1.5;
+  letter-spacing: .15em;
   color: white;
   text-transform: uppercase;
   margin: 0;
