--- a/blocks/place-baikal/__title/place-baikal__title.css
+++ b/blocks/place-baikal/__title/place-baikal__title.css
@@ -7,12 +7,12 @@
   max-width: 560px;
   text-align: center;
   text-decoration: none;
+  position: relative;
 }
 
 @media screen and (max-width: 630px) {
   .place-baikal__title {
     font-size: 40px;
-    line-height: 1;
     max-width: 290px;
   }
 }
@@ -20,7 +20,6 @@
 @media screen and (max-width: 320px) {
   .place-baikal__title {
     font-size: 32px;
-    line-height: 1;
     max-width: 250px;
   }
 }
