--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -7,6 +7,11 @@
   padding-right: 18px;
 }
 
+.footer__link:hover {
+  opacity: .8;
+  transition: opacity 0.5s;
+}
+
 @media screen and (max-width: 575px) {
   .footer__link {
     font-size: 24px;
