--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -3,6 +3,7 @@
   font-size: 24px;
   font-weight: normal;
   line-height: 1.2;
+  text-decoration: none;
 }
 
 .header__lang-link:first-child {
@@ -10,7 +11,7 @@
 }
 
 .header__lang-link:hover {
-  text-decoration: underline;
+  color: rgba(255, 255, 255, .8);
 }
 
 @media  screen and (max-width: 320px) {
