--- a/blocks/page/__header/page__header.css
+++ b/blocks/page/__header/page__header.css
@@ -1,4 +1,11 @@
 .page__header {
   max-width: 1280px;
   margin: 0 auto;
+  margin-bottom: 56px;
+}
+
+@media screen and (max-width: 1024px) {
+  .page__header {
+    margin-bottom: 48px;
+  }
 }
