--- a/blocks/page/__intro/page__intro.css
+++ b/blocks/page/__intro/page__intro.css
@@ -8,6 +8,8 @@
 @media screen and (max-width: 768px) {
   .page__intro {
     padding-left: 24px;
+    padding-right: 24px;
+    grid-template-columns: 1fr;
   }
 }
 
