--- a/blocks/place/__url/place__url.css
+++ b/blocks/place/__url/place__url.css
@@ -3,6 +3,7 @@
   font-size: 12px;
   font-weight: normal;
   line-height: 1;
+  letter-spacing: .2em;
   text-transform: uppercase;
   margin: 0;
   padding-bottom: 12px;
