--- a/pages/index.css
+++ b/pages/index.css
@@ -5,6 +5,7 @@
 @import url(../blocks/header/header.css);
 @import url(../blocks/main/main.css);
 @import url(../blocks/lead/lead.css);
+@import url(../blocks/figure/figure.css);
 @import url(../blocks/intro/intro.css);
 @import url(../blocks/photo-grid/photo-grid.css);
 @import url(../blocks/places/places.css);
@@ -16,6 +17,7 @@
 @import url(../blocks/page/__header/page__header.css);
 @import url(../blocks/page/__lead/page__lead.css);
 @import url(../blocks/page/__intro/page__intro.css);
+@import url(../blocks/page/__places/page__places.css);
 @import url(../blocks/page/__photo-grid/page__photo-grid.css);
 @import url(../blocks/page/__place/page__place.css);
 @import url(../blocks/page/__footer/page__footer.css);
@@ -30,6 +32,7 @@
 @import url(../blocks/intro/__paragraph/intro__paragraph.css);
 @import url(../blocks/intro/__facts/intro__facts.css);
 @import url(../blocks/intro/__fact/intro__fact.css);
+@import url(../blocks/intro/__span-accent/_weight/intro__span-accent_weight-normal.css);
 @import url(../blocks/photo-grid/__list/photo-grid__list.css);
 @import url(../blocks/photo-grid/__item/photo-grid__item.css);
 @import url(../blocks/place/__title/place__title.css);
@@ -39,14 +42,13 @@
 @import url(../blocks/place/__link/place__link.css);
 @import url(../blocks/place/__text/place__text.css);
 @import url(../blocks/place/__paragraph/place__paragraph.css);
-@import url(../blocks/place-baikal/__link/place-baikal__link.css);
-@import url(../blocks/place-baikal/__cover/place-baikal__cover.css);
+@import url(../blocks/place-baikal/__item/place-baikal__item.css);
 @import url(../blocks/place-baikal/__overlay/place-baikal__overlay.css);
 @import url(../blocks/place-baikal/__title/place-baikal__title.css);
 @import url(../blocks/place-baikal/__subtitle/place-baikal__subtitle.css);
-@import url(../blocks/footer/__menu/footer__menu.css);
 @import url(../blocks/footer/__links/footer__links.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 @import url(../blocks/footer/__link/footer__link.css);
 /*Modifiers*/
-@import url(../blocks/intro/__fact/intro__fact_weight/intro__fact_weight-normal.css);
+@import url(../blocks/header/__lang-link/_active/header__link_active.css);
+@import url(../blocks/intro/__fact/_weight/intro__fact_weight-normal.css);
