--- a/blocks/header/__lang-links/header__lang-links.css
+++ b/blocks/header/__lang-links/header__lang-links.css
@@ -1,8 +1,11 @@
 .header__lang-links {
   display: flex;
+  align-items: center;
   list-style: none;
+  padding: 0;
+  margin: 0;
   padding-right: 48px;
-  padding-top: 28px;
+  padding-top: 30px;
 }
 
 @media  screen and (max-width: 768px) {
