--- a/pages/index.css
+++ b/pages/index.css
@@ -3,7 +3,6 @@
 /*Blocks*/
 @import url(../blocks/page/page.css);
 @import url(../blocks/header/header.css);
-@import url(../blocks/main/main.css);
 @import url(../blocks/lead/lead.css);
 @import url(../blocks/figure/figure.css);
 @import url(../blocks/intro/intro.css);
@@ -32,7 +31,7 @@
 @import url(../blocks/intro/__paragraph/intro__paragraph.css);
 @import url(../blocks/intro/__facts/intro__facts.css);
 @import url(../blocks/intro/__fact/intro__fact.css);
-@import url(../blocks/intro/__span-accent/_weight/intro__span-accent_weight-normal.css);
+@import url(../blocks/intro/__span-accent/intro__span-accent.css);
 @import url(../blocks/photo-grid/__list/photo-grid__list.css);
 @import url(../blocks/photo-grid/__item/photo-grid__item.css);
 @import url(../blocks/place/__title/place__title.css);
@@ -40,15 +39,19 @@
 @import url(../blocks/place/__website/place__website.css);
 @import url(../blocks/place/__url/place__url.css);
 @import url(../blocks/place/__link/place__link.css);
-@import url(../blocks/place/__text/place__text.css);
 @import url(../blocks/place/__paragraph/place__paragraph.css);
 @import url(../blocks/place-baikal/__item/place-baikal__item.css);
-@import url(../blocks/place-baikal/__overlay/place-baikal__overlay.css);
 @import url(../blocks/place-baikal/__title/place-baikal__title.css);
 @import url(../blocks/place-baikal/__subtitle/place-baikal__subtitle.css);
 @import url(../blocks/footer/__links/footer__links.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 @import url(../blocks/footer/__link/footer__link.css);
 /*Modifiers*/
-@import url(../blocks/header/__lang-link/_active/header__link_active.css);
-@import url(../blocks/intro/__fact/_weight/intro__fact_weight-normal.css);
+@import url(../blocks/header/__lang-link/_active/header__lang-link_active.css);
+
+
+
+* {
+  outline: 1px solid red;
+  }
+
